--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
 	<header>
 		<div class="container">
-			<img class="logo" src="images/logo.png"/>
+			<img class="logo" src="images/logo-desktop.png" />
+			</div>
 		</div>
 	</header>
 		<div class="video-wrapper">
@@ -40,7 +41,7 @@
 		</div>
 	</div>
 	
-		<p id="static">+44 (0)161 477 5678 • info@har eldtableware.co.uk<br/>
+		<p id="static">+44 (0)161 477 5678 • <a href="mailto:info@harfieldtableware.co.uk">info@harfieldtableware.co.uk</a><br/>
 		Harfield Components Ltd, Hammond Avenue, Whitehill Ind Est, Stockport, SK4 1PQ</p>
 
 </footer>
